Fixed authority to not complain about pID unless it's an invalid url